tests/executionspec/snapshots/execution_spec__auth.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream @link(id: "htpasswd", src: ".htpasswd", type: Htpasswd) @link(id: "jwks", src: "jwks.json", type: Jwks) {
  query: Query
}

type Query {
  data: String @expr(body: "data") @protected
}
